[gd_scene load_steps=5 format=3 uid="uid://bm0oau8tc2cch"]

[ext_resource type="Script" path="res://Room2.gd" id="1_6yobv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4qr4g"]
size = Vector2(83, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_is2wf"]
size = Vector2(1163, 119)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bhm44"]
size = Vector2(77, 64)

[node name="Room2" type="Node2D"]
script = ExtResource("1_6yobv")

[node name="LeftExit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftExit"]
position = Vector2(163, 494)
shape = SubResource("RectangleShape2D_4qr4g")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(258, 419)

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(319, 170)
shape = SubResource("RectangleShape2D_is2wf")
debug_color = Color(2.83971e-06, 0.640427, 0.35006, 0.42)

[node name="RightExit" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightExit"]
position = Vector2(1071, 486)
shape = SubResource("RectangleShape2D_bhm44")
debug_color = Color(0.843784, 0.00104733, 0.914523, 0.42)

[node name="LeftEntry" type="Marker2D" parent="."]
position = Vector2(322, 489)

[node name="RightEntry" type="Marker2D" parent="."]
position = Vector2(887, 481)

[node name="Label" type="Label" parent="."]
offset_left = 495.0
offset_top = 206.0
offset_right = 535.0
offset_bottom = 229.0
text = "room-2"

[connection signal="body_entered" from="LeftExit" to="." method="_on_left_exit_body_entered"]
[connection signal="body_entered" from="RightExit" to="." method="_on_right_exit_body_entered"]
